fixed issues after restructure

--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -1,1 +1,2 @@
 <h1>Sam's Beer Store - Admin!</h1>
+<p>At Sam's Beer store, we love hunting out the very best craft beers and ales from around the world. With over 800 delicious brews to choose from including Belgian beers, American beers and British real ales, there’s something for every taste!</p>
