--- a/ClientApp/app/components/navmenu/navmenu.component.css
+++ b/ClientApp/app/components/navmenu/navmenu.component.css
@@ -6,7 +6,7 @@ li .glyphicon {
 li.link-active a,
 li.link-active a:hover,
 li.link-active a:focus {
-    background-color: #2980b9;
+    background-color: black;
     color: white;
 }
 
