--- a/ClientApp/app/components/navmenu/navmenu.component.css
+++ b/ClientApp/app/components/navmenu/navmenu.component.css
@@ -29,7 +29,7 @@ li.link-active a:focus {
         border-radius: 0px;
         border-width: 0px;
         height: 100%;
-        background-color: #2c3e50;
+        background-color: black;
     }
     .navbar-header {
         float: none;
